# adventOfCode

./: .gitignore  README.md  pyproject.toml
2022/inputs/day10/: input_test_small.txt
2022/inputs/day11/: save.txt
2022/src/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day10.py  utils.py
2022/src/day10_classes/: cpu.py
2022/src/day11_classes/: slow_monkey.py
2022/tests/: test_day01.py  test_day02.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py
2024/input/day06/: selfmade_test_input2.txt
2024/input/day08/: test_input_tiny.txt
2024/src/: day01.py  day02.py  day03.py  day04.py  day07.py  day08.py
2024/src/day06/: day06_main.py
2024/src/day06/domain/: guard.py  map_reader.py  state.py
2024/test/: conftest.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day08.py
inputs/day07/: input_test2.txt
inputs/day11/: input_test_happening.txt  wrong.txt
inputs/day4/: input_test2.txt
src/: day01.py  day08.py  day09.py  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  utils.py
src/day10_classes/: cpu.py  crt.py
src/day11_classes/: monkey.py
tests/: test_day01.py  test_day03.py  test_day04.py  test_day05.py  test_day1.py  test_day11.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
