[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["ClaraTump <clara.tump@snappet.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
